# cairn-mail

./: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  flake.nix  pyproject.toml  test
alembic/: env.py
alembic/versions/: 007_add_consecutive_empty_syncs_column.py
docs/: ACTION_TAGS.md  ARCHITECTURE.md  CLI_REFERENCE.md  CONFIGURATION.md  DEVELOPMENT.md  QUICKSTART.md  USER_GUIDE.md
docs/archive/: AI_MODELS.md  BACKEND_API_COMPLETE.md  DEPLOYMENT_SUCCESS.md  MODULE_TEST.md  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  PHASE2_PROGRESS.md  PHASE3_COMPLETE.md  SESSION_SUMMARY.md
docs/dev-notes/: DEV_SETUP.md  IMPLEMENTATION.md
modules/home-manager/: README.md  default.nix
modules/nixos/: default.nix
openspec/: config.yaml
openspec/changes/add-hidden-account-support/: tasks.md
openspec/changes/add-mcp-contacts-client/: design.md  proposal.md  tasks.md
openspec/changes/add-mcp-server/: design.md  proposal.md  tasks.md
openspec/changes/expand-mcp-tools/: tasks.md
openspec/changes/fix-clear-trash-ux/: proposal.md
openspec/specs/action-tags/: spec.md
openspec/specs/mcp-tool-expansion/: spec.md
scripts/: setup_test_account.py
src/: ai_classifier.py  generate_config.py  store_password.py
src/axios_ai_mail/: action_agent.py  ai_classifier.py  sync_engine.py
src/axios_ai_mail/api/: main.py
src/axios_ai_mail/cli/: sync.py
src/axios_ai_mail/config/: loader.py
src/axios_ai_mail/db/: database.py  models.py
src/axios_ai_mail/mcp/: client.py  tools.py
src/axios_ai_mail/providers/: imap_idle.py
src/cairn_mail/: __init__.py  ai_classifier.py  credentials.py  gateway_client.py  push_service.py  sync_engine.py
src/cairn_mail/api/: __init__.py  main.py  models.py  websocket.py
src/cairn_mail/cli/: __init__.py  accounts.py  auth.py  main.py  mcp.py  status.py  sync.py  web.py
src/cairn_mail/config/: __init__.py  actions.py  loader.py  tags.py
src/cairn_mail/db/: __init__.py  database.py  migrate.py  models.py
src/cairn_mail/email/: __init__.py  mime_builder.py  smtp_client.py
src/cairn_mail/mcp/: __init__.py  client.py  server.py  tools.py  utils.py
src/cairn_mail/providers/: __init__.py  base.py  connection_pool.py  factory.py  registry.py  server_registry.py
tests/ai/: test_ai_classifier.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: sw.ts
web/src/api/: client.ts
(+74 files in other folders)
