[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "axios-ai-mail"
version = "2.0.0"
description = "AI-enhanced email workflow with two-way sync"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Keith Calvelli" }
]
dependencies = [
    # Core
    "pydantic>=2.0",
    "pydantic-settings>=2.0",

    # Database
    "sqlalchemy>=2.0",
    "alembic>=1.12",

    # Email providers
    "google-api-python-client>=2.100",
    "google-auth-httplib2>=0.1",
    "google-auth-oauthlib>=1.1",
    "msal>=1.24",  # Microsoft Authentication Library

    # HTTP/API
    "httpx>=0.25",
    "requests>=2.31",

    # CLI
    "click>=8.1",
    "rich>=13.0",  # Beautiful CLI output
    "typer>=0.9",  # Better CLI framework

    # Utilities
    "python-dateutil>=2.8",
    "pyyaml>=6.0",

    # MCP (Model Context Protocol)
    "mcp>=1.0.0",

    # Push notifications
    "pywebpush>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.1",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.5",
    "types-requests",
    "types-pyyaml",
    "ipython>=8.12",  # For interactive testing
]

api = [
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
    "websockets>=12.0",
]

all = [
    "axios-ai-mail[dev,api]",
]

[project.scripts]
axios-ai-mail = "axios_ai_mail.cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
axios_ai_mail = ["web_assets/**/*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=axios_ai_mail",
]
